working media routes
